--- a/ecommerce-app-backend3/package.json
+++ b/ecommerce-app-backend3/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.9",
     "razorpay": "^2.9.4",
     "stripe": "^16.11.0",
     "validator": "^13.12.0"
